--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -231,7 +231,7 @@ For example $C_{xxxx} = C_{yyyy} = C_{zzzz}$, and $C_{xyxy} = C_{yxyx} = C_{yzyz
 \end{table}
 
 To find the static equilibrium state in the most general sense, the integrated free energy $F[P,\varepsilon] = \int d^3x \,f[P(x), \varepsilon(x)])$ needs to be minimized, for which the variational method can be used.
-This leads to the well known Euler-Lagrange equations \cite{Cao1991, Marton2010}:
+This leads to the well-known Euler-Lagrange equations \cite{Cao1991, Marton2010}:
 \begin{align}
 	\label{eq:BTO_euler}
 	\frac{\partial}{\partial x_j}\left( \frac{\partial f}{\partial P_{i,j}}\right) - \frac{\partial f}{\partial P_i} &= 0, \\
@@ -512,7 +512,7 @@ Comparing the two simulation protocols, we can also observe that when the wall i
 We find a maximum softening of about 20\% in this case, which is remarkably close to the experimental measurements.
 \begin{figure}
 	\IncludeGraphics{2D_bending}
-	\caption{\label{fig:BTO_bending_sim}{\bf Bending Wall} Simulations where the bottom of the wall is kept fixed to the equilibrium without a tip. In each panel, the coloring indicates the position where the tip is applied to the sample. a) Surface profile of the wall. b) Polarization distribution at the surface. c) Deformation of the surface after applying the tip. d) Maximum absolute value of the deformation in (c). e) Relative stiffness depending on where the tip is applied. f) Strain profile when tip is too far from wall to make it bend. g) When the tip is close to the wall causing it to bend. In panels (f, g) the vertical and dashed white lines denote the equilibrium and perturbed positions of the wall, respectively.}
+	\caption{\label{fig:BTO_bending_sim}{\bf Bending Wall} Simulations where the bottom of the wall is kept fixed to the equilibrium without a tip. In each panel, the coloring indicates the position where the tip is applied to the sample. a) Surface profile of the wall. b) Polarization distribution at the surface. Notice the movement of the wall center when the tip is applied. c) Deformation of the surface after applying the tip. d) Maximum absolute value of the deformation in (c). e) Relative stiffness depending on where the tip is applied. f) Strain profile when tip is too far from wall to make it bend. g) When the tip is close to the wall causing it to bend. In panels (f, g) the vertical and dashed white lines denote the equilibrium and perturbed positions of the wall, respectively.}
 \end{figure}
 \begin{figure}
 	\IncludeGraphics{2D_sliding}
