--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -173,7 +173,7 @@ Theoretical condensed matter research is plagued by a fundamental issue of compl
 %This forces researchers in the field to make approximations, as to make the problem tractable, while still capturing the essential physics resulting in the effects under investigation.
 The way to make progress with this undertaking has always been to try and isolate the parts of the system that play the biggest role in the effects under investigation, while neglecting those that only lead to more complexity.
 
-As is well known, every quantum mechanical system is governed fundamentally by its Hamiltonian. One could go so far as to say that if we would be able to exactly calculate all of the eigenvectors and eigenvalues of the Hamiltonian describing the material under study, the field of condensed matter would be completed. This is ofcourse impossible for reasons stated before.
+As is well-known, every quantum mechanical system is governed fundamentally by its Hamiltonian. One could go so far as to say that if we would be able to exactly calculate all of the eigenvectors and eigenvalues of the Hamiltonian describing the material under study, the field of condensed matter would be completed. This is ofcourse impossible for reasons stated before.
 The full Hamiltonian can be decomposed into contributions from all parts of the system, and interactions between those parts.
 It is then quite straightforward to separate these into different energy scales, or through $\Ket{\psi(t)} = e^{-i \frac{\mathcal{H}t}{\hbar}}\Ket{\psi(0)}$, different characteristic timescales.
 There are two alleys along which one can proceed to simplify the problem. When the interactions between these parts are negligible, the two subsystems can be decoupled and solved separately.
@@ -212,11 +212,11 @@ We utilize both theoretical and computational tools to understand the nature of 
 % \Include{Introduction}
 
 % \Include{Theory}
-% \Include{Rashba}
+\Include{Rashba}
 % \Include{GdMn2O5}
 % \Include{Cr}
 
-\Include{Softening}
+% \Include{Softening}
 \backmatter
 \bibliography{references}
 \printindex
